fix-minor-bugs-and-update-some-feature